--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -29,7 +29,7 @@
         <div id="map-modal-content"></div>
       </div>
       <div class="text-box">
-        <p>Condición hídrica de los principales cursos de la Cuenca del Plata en territorio Argentino en base a la última observación de nivel o caudal en estaciones de referencia. Se calcula la frecuencia de superación (%) en el periodo 1991-2020 y se clasifica en 5 categorías.</p>
+        <p>Condición hídrica de los principales cursos de la Cuenca del Plata en territorio Argentino en base a la última observación de nivel o caudal en estaciones de referencia. Se calcula la frecuencia de superación (%) en el periodo 1991-2020 y se clasifica en 5 categorías. Adicionalmente se indica superación de niveles de alerta y evacuación.</p>
       </div>
     </div>
     {{!-- <h4>Tabla de situación y perspectiva a corto plazo</h4> --}}
@@ -82,11 +82,11 @@
       </table>
     </div>
     <table class="leyenda-tabla-hidro">
-      <tr><td style="background-color: {{status_colors.aguas_altas}} !important;">aguas altas</td></tr>
-      <tr><td style="background-color: {{status_colors.aguas_medias_altas}} !important;">aguas medias altas</td></tr>
-      <tr><td style="background-color: {{status_colors.aguas_medias}} !important;">aguas medias</td></tr>
-      <tr><td style="background-color: {{status_colors.aguas_medias_bajas}} !important;"> aguas medias bajas</td></tr>
-      <tr><td style="background-color: {{status_colors.aguas_bajas}} !important;">aguas bajas</td></tr>
+      <tr><td style="background-color: {{status_colors.aguas_altas}} !important;" title="Niveles de aguas altas son aquellos valores que se igualan o exceden en el 5&#37; o menos de los registros disponibles, en el sitio de medición.">aguas altas</td></tr>
+      <tr><td style="background-color: {{status_colors.aguas_medias_altas}} !important;" title="Niveles de aguas medias altas son aquellos valores que se igualan o exceden entre el 25&#37; y el 5&#37; de los registros disponibles, en el sitio de medición (por encima de los normales).">aguas medias altas</td></tr>
+      <tr><td style="background-color: {{status_colors.aguas_medias}} !important;" title="Niveles de aguas medias son aquellos valores que se igualan o exceden entre el 75&#37; y el 25&#37; de los registros disponibles, en el sitio de medición (normales).">aguas medias</td></tr>
+      <tr><td style="background-color: {{status_colors.aguas_medias_bajas}} !important;" title="Niveles de aguas medias bajas son aquellos valores que se igualan o exceden entre el 95&#37; y el 75&#37; de los registros disponibles, en el sitio de medición (por debajo de los normales)."> aguas medias bajas</td></tr>
+      <tr><td style="background-color: {{status_colors.aguas_bajas}} !important;" title="Niveles de aguas bajas son aquellos valores que se igualan o exceden en más del 95&#37; de los registros disponibles, en el sitio de medición">aguas bajas</td></tr>
     </table>
     <div class="paragraph">{{texto_hidro}}</div>
     <h4>Hidrogramas</h4>
