--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -94,6 +94,17 @@
     .ql-toolbar button:active:hover {
       outline: none;
     }
+
+    .custom-button {
+      padding: 4px 10px;
+      background-color: #DEE2E6;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+      margin-top: 10px;
+      font-weight: 500;
+    }
   </style>
 </head>
 <body>
@@ -111,6 +122,13 @@
           <button class="button" id=load-template-button onclick="startFromTemplate()">Cargar plantilla</button>
         </span>
         <span>
+          <label for="fileInput" class="custom-button">Cargar HTML</label>
+          <input type="file" id="fileInput" accept=".html" style="display: none;">
+        </span>
+        <span>
+          <button class="button" onclick="saveAsHtml()" id="dwnld-button">Descargar HTML</button>
+        </span>
+        <span>
           <button class="button" id=save-button onclick="saveContent()">Guardar</button>
         </span>
         <span>
@@ -122,76 +140,76 @@
   <!-- blocking overlay -->
   <script>
 
-      $("textarea#editor").richText()
+    $("textarea#editor").richText()
 
-      async function loadContent(content_path) {
-        // Load existing content
-        const blocker = document.getElementById('screen-blocker');
-        blocker.style.display = 'block';
-        try {
-          const response = await fetch(content_path)
-          if(!response.ok) {
-            const error_text = await response.text()
-            alert(error_text)
-            throw new Error(`HTTP ${response.status} - ${response.statusText}: ${error_text}`);
-          }
-          const response_text = await response.text()
-          $("textarea#editor").val(response_text).trigger("change")
-          await new Promise(requestAnimationFrame);
-          await new Promise(requestAnimationFrame);
-        } catch (error) {
-          alert('Falló la carga de contenido: ' + error.message)
-          console.error('Falló la carga de contenido', error.message);
-        } finally {
-          blocker.style.display = 'none'; // re-enable interaction
+    async function loadContent(content_path) {
+      // Load existing content
+      const blocker = document.getElementById('screen-blocker');
+      blocker.style.display = 'block';
+      try {
+        const response = await fetch(content_path)
+        if(!response.ok) {
+          const error_text = await response.text()
+          alert(error_text)
+          throw new Error(`HTTP ${response.status} - ${response.statusText}: ${error_text}`);
         }
+        const response_text = await response.text()
+        $("textarea#editor").val(response_text).trigger("change")
+        await new Promise(requestAnimationFrame);
+        await new Promise(requestAnimationFrame);
+      } catch (error) {
+        alert('Falló la carga de contenido: ' + error.message)
+        console.error('Falló la carga de contenido', error.message);
+      } finally {
+        blocker.style.display = 'none'; // re-enable interaction
       }
-      loadContent('content')
-      // const toggleBtn = document.getElementById('toggleView');
-      const htmlView = document.getElementById('html-view');
-      const editorContainer = document.getElementById('editor');
+    }
+    loadContent('content')
+    // const toggleBtn = document.getElementById('toggleView');
+    const htmlView = document.getElementById('html-view');
+    const editorContainer = document.getElementById('editor');
 
-      let codeView = false;
+    let codeView = false;
 
-      // toggleBtn.addEventListener('click', async () => {
-      //   codeView = !codeView;
+    // toggleBtn.addEventListener('click', async () => {
+    //   codeView = !codeView;
 
-      //   if (codeView) {
-      //     // Switch to HTML view
-      //     const rawHtml = quill.root.innerHTML;
-      //     const formatted = await prettier.format(rawHtml, {
-      //       parser: 'html',
-      //       plugins: prettierPlugins
-      //     });
-      //     htmlView.value = formatted;
-      //     htmlView.style.display = 'block';
-      //     editorContainer.style.display = 'none';
-      //     toggleBtn.textContent = 'Cambiar a WYSIWYG';
-      //     document.getElementById("save-button").disabled = true
-      //     document.getElementById("load-template-button").disabled = true
-      //     document.getElementById("toolbar").style.display = "none" 
-      //   } else {
-      //     // Switch back to Quill
-      //     // quill.root.innerHTML = htmlView.value;
-      //     // const parser = new Clipboard(quill, quill.options.modules.clipboard)
-      //     var html = htmlView.value
-      //     html = convertTablesToP(html)
-      //     const delta = quill.getModule('clipboard').convert(html);
-      //     // const delta = quill.clipboard.convert(htmlView.value);
-      //     quill.setContents(delta);
-      //     htmlView.style.display = 'none';
-      //     editorContainer.style.display = 'block';
-      //     toggleBtn.textContent = 'Cambiar a vista de código';
-      //     document.getElementById("save-button").disabled = false
-      //     document.getElementById("load-template-button").disabled = false
-      //     document.getElementById("toolbar").style.display = "block" 
-      //   }
-      // });
+    //   if (codeView) {
+    //     // Switch to HTML view
+    //     const rawHtml = quill.root.innerHTML;
+    //     const formatted = await prettier.format(rawHtml, {
+    //       parser: 'html',
+    //       plugins: prettierPlugins
+    //     });
+    //     htmlView.value = formatted;
+    //     htmlView.style.display = 'block';
+    //     editorContainer.style.display = 'none';
+    //     toggleBtn.textContent = 'Cambiar a WYSIWYG';
+    //     document.getElementById("save-button").disabled = true
+    //     document.getElementById("load-template-button").disabled = true
+    //     document.getElementById("toolbar").style.display = "none" 
+    //   } else {
+    //     // Switch back to Quill
+    //     // quill.root.innerHTML = htmlView.value;
+    //     // const parser = new Clipboard(quill, quill.options.modules.clipboard)
+    //     var html = htmlView.value
+    //     html = convertTablesToP(html)
+    //     const delta = quill.getModule('clipboard').convert(html);
+    //     // const delta = quill.clipboard.convert(htmlView.value);
+    //     quill.setContents(delta);
+    //     htmlView.style.display = 'none';
+    //     editorContainer.style.display = 'block';
+    //     toggleBtn.textContent = 'Cambiar a vista de código';
+    //     document.getElementById("save-button").disabled = false
+    //     document.getElementById("load-template-button").disabled = false
+    //     document.getElementById("toolbar").style.display = "block" 
+    //   }
+    // });
 
-      // document.querySelector('.ql-insertTable').addEventListener('click', () => {
-      //   const tableModule = quill.getModule('better-table');
-      //   tableModule.insertTable(3, 3); // rows, columns
-      // });
+    // document.querySelector('.ql-insertTable').addEventListener('click', () => {
+    //   const tableModule = quill.getModule('better-table');
+    //   tableModule.insertTable(3, 3); // rows, columns
+    // });
     // }
       // Save content
     function saveContent() {
@@ -201,6 +219,20 @@
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ html })
       }).then(res => res.text()).then(alert).catch(alert);
+    }
+
+    function saveAsHtml() {
+      const content = document.getElementById("editor").value;
+      const blob = new Blob([content], { type: "text/html" });
+      const url = URL.createObjectURL(blob);
+
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "saved.html";
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      URL.revokeObjectURL(url);
     }
 
     // new from template
@@ -260,6 +292,19 @@
       addToolbarButton()
     });
 
+    document.getElementById("fileInput").addEventListener("change", function() {
+      const file = this.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = async function(e) {
+        // document.getElementById("editor").value = e.target.result;
+        $("textarea#editor").val(e.target.result).trigger("change")
+        await new Promise(requestAnimationFrame);
+        await new Promise(requestAnimationFrame);
+      };
+      reader.readAsText(file);
+    });
 
     // function htmlStringToDOM(html) {
     //   return new DOMParser().parseFromString(html, 'text/html').body;
