--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -100,7 +100,7 @@
     {{/each}}
     <div>
       <h4>Notas</h4>
-      <ul>
+      <ul id="lista-notas">
         <li>Los pronósticos del río Paraná (tramo medio) se actualizan los días martes (a 7 y 14 días) y viernes (4 y 11 días)</li>
         <li>Los pronósticos del río Uruguay se actualizan los lunes, miércoles y viernes.</li>
         <li>
