--- a/views/reporte_diario.handlebars
+++ b/views/reporte_diario.handlebars
@@ -170,8 +170,13 @@
         display: block;
       }
 
-      div.paragraph {
+      #report_container div.paragraph {
           width: 714px;
+          font-size: 13px;
+      }
+
+      #report_container #lista-notas {
+          font-size: 12px;
       }
 
       #report_container table.tabla-hidro {
@@ -180,13 +185,11 @@
         font-size: 13px;
       }
 
-      .paragraph {
-        font-size: 13px;
-      }
-      #report_container table.tabla-hidro th:nth-child(6), #report_container table.tabla-hidro td:nth-child(6){
+      #report_container table.tabla-hidro th:nth-child(1), #report_container table.tabla-hidro td:nth-child(1), #report_container table.tabla-hidro th:nth-child(6), #report_container table.tabla-hidro td:nth-child(6) {
         overflow-wrap: break-word;
         font-size: inherit;
       }
+
       .accordion-header {
         display: none;
       }
