--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -106,7 +106,7 @@
         <li>
           Para mayor seguimiento los productos operativos y experimentales de monitoreo, pronóstico y perspectiva pueden consultarse en:
           <ul>
-            <li><a href="https://ina.gob.ar/alerta/">http://ina.gob.ar/alerta/</a> (sitio del Alerta Hidrológico de CDP del INA)</li>
+            <li><a href="https://ina.gob.ar/alerta/">https://ina.gob.ar/alerta/</a> (sitio del Alerta Hidrológico de CDP del INA)</li>
             <li><a href="https://alerta.ina.gob.ar/pub/mapa">https://alerta.ina.gob.ar/pub/mapa</a> (mapa web, productos puntuales y areales)</li>
             <li><a href="https://alerta.ina.gob.ar/a5/secciones">https://alerta.ina.gob.ar/a5/secciones</a> (series de observaciones y previsiones numéricas de nivel o caudal)</li>
             <li><a href="https://ina.gob.ar/alerta/index.php?seccion=10">https://ina.gob.ar/alerta/index.php?seccion=10</a> (previsiones numéricas Delta del Paraná)</li>
