--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -34,7 +34,7 @@
     </div>
     {{!-- <h4>Tabla de situación y perspectiva a corto plazo</h4> --}}
     <div class="table-wrapper">
-      <table class="tabla-hidro" id="tabla-alturas">
+      <table class="table-hover tabla-hidro" id="tabla-alturas">
         <thead>
           <th>Estación</th>
           <th>Río</th>
@@ -58,7 +58,7 @@
       </table>
     </div>
     <div class="table-wrapper">
-      <table class="tabla-hidro" id="tabla-caudales">
+      <table class="table-hover tabla-hidro" id="tabla-caudales">
         <thead>
           <th>Estación</th>
           <th>Río</th>
