leyenda-tabla-hidro print font size

--- a/views/reporte_diario.handlebars
+++ b/views/reporte_diario.handlebars
@@ -182,6 +182,10 @@
         font-size: inherit;
       }
 
+      #report_container table.leyenda-tabla-hidro td {
+        font-size: 14px;
+      }
+
       .accordion-header {
         display: none;
       }
